components/sections/aboutMe.module.css
.aboutMe {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.theGrid {
  min-height: 70vh;
  display: grid;
  grid-template-columns: 55% 45%;
  grid-template-rows: 85% 15%;
}
.left {
  grid-column: 1 / span 1;
  grid-row: 1 / span 1;
  height: 100%;
  display: flex;
  flex-direction: column;
  width: 100%;
}
.right {
  grid-column: 2 / span 1;
  grid-row: 1 / span 1;
  display: flex;
  align-items: center;
  height: 70%;
  opacity: 0.7;
}

.image {
  width: 270px;
  max-width: 90%;
  margin-left: 10%;
  height: auto;
  border-radius: 5px;
  box-shadow: 2px 4px 27px -10px rgb(255, 255, 255);
}
.image:hover {
  cursor: grab;
}
.technologies {
  grid-row: 2 / span 1;
  grid-column: 1 / span 2;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  align-items: center;
  column-gap: 5px;
  row-gap: 10px;
}
.number {
  color: var(--color-tron);
}
.item {
  text-align: center;
  color: var(--color-dark);
  background-color: var(--color-light-grey);
  padding: 5% 5% 5% 5%;
  width: 50%;
  justify-self: center;
  border-radius: 5px;
  font-family: var(--font-text);
  font-size: 1rem;
}
/* .item:hover {
  transform: skewY(5deg);
} */
.title {
  font-size: 2rem;
  padding: 0;
  margin: 0 0 5px 0;
}
.text {
  overflow-wrap: break-word;
  font-size: 1.3rem;
  color: var(--color-light);
  font-family: var(--font-text);
}

@media only screen and (max-width: 750px) {
  /* .aboutMe {
    background-color: blueviolet;
  } */
  .theGrid {
    display: flex !important;
    flex-direction: column;
    min-height: 70vh;
  }
  .text {
    font-size: 1.05rem;
    overflow-wrap: break-word;
    text-align: center;
  }
  .item {
    padding: 4px;
  }
  .left {
    display: flex;
    width: 95%;
    align-self: center;
    font-size: 1.2rem;
    margin-bottom: 3%;
  }
  .right {
    display: flex;
    justify-content: center;
    margin-top: 2%;
  }
  .technologies {
    flex-wrap: wrap;
    margin: 10px 0 10px 0;
    height: 40%;
  }
  .image {
    max-width: 230px;
    height: auto;
    margin: 0;
  }
}
@media only screen and (max-width: 400px) { 
  .text {
    font-size: .95rem;
    overflow-wrap: break-word;
    padding: 0;
    margin: 0;
  }
  .item {
    font-size: 3vw;
  }
  .image {
    max-width: 200px;
    height: auto;
  }
}

@media only screen and (max-height: 700px) {
  .aboutMe {
    max-height: auto;
  }
  .theGrid {
    min-height: 100%;
  }
  .title {
    margin: 0 0 15px 0;
  }
  .text {
    font-size: .95rem;
  }
}

